syntax = "proto3";

package v1;

import "google/api/annotations.proto";

// User management service definition
service UserService {
    rpc ListUser(ListUserRequest) returns (ListUserResponse) {
        option (google.api.http) = {
          get: "/api/v1/users",
        };
    }
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
          get: "/api/v1/users/{id}",
        };
    }
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
          post: "/api/v1/users",
          body: "user",
        };
    }
    rpc CreateUsers(CreateUsersRequest) returns (CreateUsersResponse) {
        option (google.api.http) = {
          post: "/api/v1/users/bulk",
          body: "*",
        };
    }
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
        option (google.api.http) = {
          put: "/api/v1/users",
          body: "user",
        };
    }
    rpc UpdateUsers(UpdateUsersRequest) returns (UpdateUsersResponse) {
        option (google.api.http) = {
          put: "/api/v1/users/bulk",
          body: "*",
        };
    }
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
        option (google.api.http) = {
          delete: "/api/v1/users/{id}",
        };
    }
}

//
message User {
    string  id   = 1;
    string username = 2;
    string email    = 3;
    string password = 4;
    string phone    = 5;
}

//

message ListUserRequest {}

message ListUserResponse {
    repeated User users = 1;
    bool success = 2;
}

//
message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

//
message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    string id = 1;
    bool success = 2;
}

//
message CreateUsersRequest {
    repeated User users = 1;
}

message CreateUsersResponse {
    repeated string ids = 1;
    bool success = 2;
}

//
message UpdateUserRequest {
    User user = 1;
}

message UpdateUserResponse {
    string id = 1;
    bool success  = 2;
}

//
message UpdateUsersRequest {
    repeated User users = 1;
}

message UpdateUsersResponse {
    repeated string ids  = 1;
    bool success  = 2;
}

//
message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    string id = 1;
    bool success = 2;
}